# bond-scrapper

./: .gitignore  README.md  extract_data.py  pyproject.toml  requirements.txt  send_email.py
.github/workflows/: daily-bond-report.yml
output/: treasury_bond_yields.xlsx
